@@ -1327,13 +1327,13 @@ Same as \fB\-\-network\fR
 \fBSLURM_NNODES\fR
 Same as \fB\-N, \-\-nodes\fR
 .TP
-\fBSLURN_NTASKS_PER_CORE\fR
+\fBSLURM_NTASKS_PER_CORE\fR
 Same as \fB\-\-ntasks\-per\-core\fR
 .TP
-\fBSLURN_NTASKS_PER_NODE\fR
+\fBSLURM_NTASKS_PER_NODE\fR
 Same as \fB\-\-ntasks\-per\-node\fR
 .TP
-\fBSLURN_NTASKS_PER_SOCKET\fR
+\fBSLURM_NTASKS_PER_SOCKET\fR
 Same as \fB\-\-ntasks\-per\-socket\fR
 .TP
 \fBSLURM_NO_ROTATE\fR
