@@ -19,6 +19,8 @@ documents those changes that are of interest to users and admins.
     command is issued.
  -- BLUEGENE - Fix for -n option to work on correct cpu counts for each 
     midplane instead of treating -n as a c-node count.
+ -- salloc now sets SLURN_NTASKS_PER_NODE if --ntasks-per-node option is set.
+ -- Fix select/linear to properly set a job's count of allocated processors.
 
 * Changes in SLURM 2.0.1
 ========================
